--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
-  "dependencies": { "lenis": "^1.1.3" },
+  "dependencies": {
+    "lenis": "^1.1.3"
+  },
   "devDependencies": {
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.4"
   }
 }
