Update project structure with new server setup, enhance CSS with Tailwind updates, and add a personalized HTML page for Tsion.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
+  "scripts": {
+    "dev": "concurrently \"bunx tailwindcss -i ./src/style.css -o ./src/index.css --watch\" \"bun server.js\"",
+    "build:css": "bunx tailwindcss -i ./src/style.css -o ./src/index.css",
+    "build:css:watch": "bunx tailwindcss -i ./src/style.css -o ./src/index.css --watch",
+    "serve": "bun server.js"
+  },
   "dependencies": {
-    "lenis": "^1.1.3"
+    "framer-motion": "^12.29.2",
+    "lenis": "^1.3.17",
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^3.4.4"
+    "concurrently": "^9.2.1",
+    "prettier": "^3.8.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "tailwindcss": "^3.4.19"
   }
 }
